Fix colors for legibility
* page-header page to black (issue 118)
* text color to #1a1a1a (issue 118)
* campaign tags to #0275d8; (117)

--- a/src/scss/common/_page-header.scss
+++ b/src/scss/common/_page-header.scss
@@ -1,5 +1,5 @@
 /* Header block
- * The main block where a heading subheading and description along with 
+ * The main block where a heading subheading and description along with
  * a CTA button is present
  */
 
@@ -8,7 +8,7 @@
 }
 
 .page-header {
-	color: $white;
+	color: $black;
 	padding: 110px 0 50px;
 	position: relative;
 
