--- a/src/scss/common/_tags-list.scss
+++ b/src/scss/common/_tags-list.scss
@@ -1,40 +1,41 @@
 .tags-list {
-	padding-left: 0;
-	font-family: $roboto;
-	margin-bottom: 0;
+  padding-left: 0;
+  font-family: $roboto;
+  margin-bottom: 0;
 }
 
 .tag-item {
-	list-style-type: none;
-	display: inline-block;
-	font-weight: 300;
+  list-style-type: none;
+  display: inline-block;
+  font-weight: 300;
+  color: $blue;
 
-	a {
-		color: inherit;
+  a {
+    color: inherit;
 
-		&:hover,
-		&:active {
-			color: inherit;
-			text-decoration: underline;
-		}
-	}
+    &:hover,
+    &:active {
+      color: inherit;
+      text-decoration: underline;
+    }
+  }
 }
 
 .tag-item--main {
-	text-transform: uppercase;
-	font-weight: 500;
-	margin-right: 20px;
-	position: relative;
+  text-transform: uppercase;
+  font-weight: 500;
+  margin-right: 20px;
+  position: relative;
 
-	&:after {
-		content: "\2022";
-		pointer-events: none;
-		display: inline-block;
-		position: absolute;
-		right: -15px;
+  &:after {
+    content: "\2022";
+    pointer-events: none;
+    display: inline-block;
+    position: absolute;
+    right: -15px;
 
     @include mobile-only {
       display: none;
     }
-	}
+  }
 }
