--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -113,6 +113,7 @@ Text Domain: planet4-master-theme
 */
 
 body {
+  color: $dark-shade-black;
   overflow-x: hidden;
   font-family: $roboto;
   position: relative;
